Fix #123820: USD Import names blender objects same as UsdPrims

Unlike e.g. the Alembic import, objects created for UsdPrims (Meshes,
...) were always named after the primitive itself, which would basically
loose potential important information.

So now do this as alembic does: get the name from the parent Xform and
use that when creating the blender objects.