source/blender/io/usd/intern/usd_reader_volume.cc
@@ -27,7 +27,7 @@ void USDVolumeReader::create_object(Main *bmain, const double /*motionSampleTime
 {
   Volume *volume = (Volume *)BKE_volume_add(bmain, name_.c_str());
 
-  object_ = BKE_object_add_only_object(bmain, OB_VOLUME, name_.c_str());
+  object_ = BKE_object_add_only_object(bmain, OB_VOLUME, object_name_.c_str());
   object_->data = volume;
 }
 
